# version_ctr_field

./: Cargo.toml  README.md
core_macro/: Cargo.toml
core_macro/src/: lib.rs  version_derive.rs
core_macro/tests/: test.rs
final_test/: Cargo.toml
final_test/src/: main.rs
into_json/: Cargo.toml
into_json/src/: lib.rs
