[package]
name = "core_macro"
version.workspace = true
edition.workspace = true
resolver = "2"
[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
into_json = { version = "0.1.0", path = "../into_json" }
serde = { workspace = true }
[lib]
proc-macro = true
